Primer Parcial Jhon Rivero

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gestionadortareas",
   "version": "1.0.0",
-  "description": "",
+  "description": "primer paso instalacion de node_modules\r > npm install\r segundo paso creacion de env\r >.env (configuracion de PORT y MONGODBURI)",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -13,7 +13,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.2.4",
+    "mongoose": "^8.3.0",
     "nodemon": "^3.1.0"
   }
 }
